@startuml
top to bottom direction
skinparam linetype ortho

entity assessment {
   assessment_id : bigint
   section_id    : bigint
}

entity assessment_clo {
   assessment_id : bigint
   clo_id        : bigint
}

entity booking {
   booking_id    : bigint
   assessment_id : bigint
   room_id       : bigint
   proctor_id    : bigint
}

entity car {
   car_id     : bigint
   section_id : bigint
}

entity clo {
   clo_id    : bigint
   course_id : bigint
}

entity course {
   course_id : bigint
}

entity enrollment {
   enrollment_id : bigint
   section_id    : bigint
   student_id    : varchar(255)
}

entity exam_room {
   room_id : bigint
}

entity grade {
   grade_id      : bigint
   assessment_id : bigint
   enrollment_id : bigint
}

entity peer_review {
   peer_review_id : bigint
   reviewer_id    : bigint
   reviewee_id    : bigint
}

entity section {
   section_id   : bigint
   course_id    : bigint
   professor_id : bigint
}

entity student {
   student_id : varchar(255)
}

entity syllabus {
   syllabus_id : bigint
   section_id  : bigint
}

entity user {
   user_id : bigint
}

entity user_roles {
   user_id : bigint
   role    : varchar(255)
}

' -------------------
' Relationships
' -------------------

course     ||--o{ section
user       ||--o{ section

section    ||--o{ assessment
assessment ||--o{ assessment_clo
clo        ||--o{ assessment_clo

course     ||--o{ clo

section    ||--|| syllabus
section    ||--|| car

section    ||--o{ enrollment
student    ||--o{ enrollment

assessment ||--o{ grade
enrollment ||--o{ grade

assessment ||--|| booking
exam_room  ||--o{ booking
user       ||--o{ booking

user       ||--o{ peer_review
user       ||--o{ peer_review

user       ||--o{ user_roles

@enduml
